--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  margin-bottom: 4rem;
+  margin-bottom: 8.75rem;
   z-index: 10;
   &__image {
   }
@@ -11,7 +11,7 @@
     color: white;
     text-align: center;
     line-height: 1.2;
-    padding: 5rem 1.65rem;
+    padding: 5rem 1.65rem 5.75rem;
     position: relative;
     h1 {
       font-family: "DM Serif Display", serif;
