--- a/app/scss/_work.scss
+++ b/app/scss/_work.scss
@@ -2,16 +2,33 @@
   background-color: $darkViolet;
   color: white;
   text-align: center;
-  padding: 4.875rem 2.75rem;
+  padding: 4.875rem 2rem;
   background-image: url(/image/bg-pattern-intro-right-mobile.svg);
   background-repeat: no-repeat;
-  background-position: right -260%;
+  background-position: 100% -59%;
   margin-bottom: 8.75rem;
+  @include breakpoint-up(large) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2.5rem 3.5rem;
+    background-image: url(/image/bg-pattern-intro-right-desktop.svg);
+    background-position: 107% 41%;
+  }
 
   h2 {
     font-size: 2.25rem;
     font-family: "DM Serif Display", serif;
     margin-bottom: 2.875rem;
     line-height: 1.2;
+    @include breakpoint-up(large) {
+      max-width: 18ch;
+      font-size: 2.75rem;
+      text-align: left;
+      margin-bottom: 0;
+    }
+  }
+  .btn {
+    align-self: center;
   }
 }
