--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -75,16 +75,16 @@ header {
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: contain;
-  @include breakpoint-up(medium) {
-    background-image: none;
-  }
+  transform: translateX(-100%);
+  transition: transform 350ms ease-in-out;
+  position: absolute;
+  z-index: 20;
 
   a {
     margin-bottom: 2.5rem;
     font-size: 1rem;
     color: white;
     text-transform: uppercase;
-    transition: all 250ms ease-in-out;
 
     &:not(:last-child) {
       &:hover {
